<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv1"
        android:layout_margin="30dp"
        ></TextView>
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb1"
        android:id="@+id/sw"
        android:layout_marginLeft="30dp"
        ></Switch>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/tv2"
        android:layout_margin="30dp"
        android:id="@+id/tv"
        ></TextView>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginLeft="30dp"
        android:id="@+id/rg">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r1"
            android:id="@+id/r1"
            ></RadioButton>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r2"
            android:id="@+id/r2"
            ></RadioButton>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r3"
            android:id="@+id/r3"
            ></RadioButton>
    </RadioGroup>

<!--    <Button-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:visibility="invisible"-->
<!--        android:id="@+id/btn1"-->
<!--        android:text="@string/btn1"-->
<!--        android:layout_marginLeft="30dp"-->
<!--        ></Button>-->

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:id="@+id/iv"
        android:layout_marginLeft="30dp"
        ></ImageView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/start"
        android:id="@+id/start"></Button>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end"
        android:id="@+id/end"></Button>



</LinearLayout>